# claude_hookcut

./: .env.production.example  .gitignore  CLAUDE.md  Procfile.dev  dev.sh  docker-compose.prod.yml  docker-compose.yml  hookcut_engine.jsx  hookcut_prd.md  hookcut_readme.md  stop.sh
hookcut-backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile.dev  README.md  alembic.ini  cookies.txt  dev.sh  pyproject.toml  railway.toml  run_server.py  start.sh
hookcut-backend/alembic/: env.py
hookcut-backend/alembic/versions/: 001_initial_schema.py  002_add_missing_indices_and_fixes.py  003_add_user_role.py  004_add_caption_style_to_shorts.py  005_add_improvement_suggestion_to_hooks.py  006_add_time_overrides_to_shorts.py  007_add_admin_tables.py  008_widen_hook_columns.py
hookcut-backend/app/: config.py  dependencies.py  exceptions.py  main.py
hookcut-backend/app/llm/: CONTRACTS.md  anthropic_provider.py  gemini_provider.py  openai_provider.py  provider.py
hookcut-backend/app/middleware/: auth.py  rate_limit.py
hookcut-backend/app/models/: __init__.py  admin.py  base.py  billing.py  learning.py  session.py  user.py
hookcut-backend/app/routers/: CONTRACTS.md  admin.py  analysis.py  billing.py  shorts.py  tasks.py  user.py
hookcut-backend/app/schemas/: admin.py  analysis.py  billing.py  hooks.py  shorts.py  tasks.py  user.py
hookcut-backend/app/services/: CONTRACTS.md  admin_service.py  analytics.py  analyze_service.py  hook_engine.py  (+11 more)
hookcut-backend/scripts/: generate_thumbnails.py  generate_titles.py
hookcut-backend/tests/: conftest.py
(+167 files in other folders)
