[project]
name = "hookcut-backend"
version = "0.1.0"
description = "HookCut — Extract hook segments from YouTube videos and generate Shorts"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "celery[redis]~=5.4",
    "redis~=5.0",
    "httpx~=0.27",
    "openai~=1.50",
    "anthropic~=0.39",
    "youtube-transcript-api~=1.2",
    "python-multipart~=0.0.9",
    "python-dotenv~=1.0",
    "psycopg2-binary~=2.9",
    "PyJWT~=2.8",
    "cryptography~=42.0",
    "stripe~=10.0",
    "razorpay~=1.4",
    "sentry-sdk[fastapi,celery]~=2.0",
    "posthog~=3.0",
    "boto3~=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=28.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "watchfiles>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
